Fix(Create listing page: break long URLs in error,  added break-all to the error message to wrap URL adress

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -981,6 +981,9 @@
   .break-words {
     overflow-wrap: break-word;
   }
+  .break-all {
+    word-break: break-all;
+  }
   .whitespace-nowrap {
     white-space: nowrap;
   }
